modify styling of tweet-text to properly wrap and prevent side scrolling to see all of the tweet

--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -20,6 +20,7 @@ $primary-background-color: rgb(62, 85, 156);
   #tweet-text {
     text-wrap: wrap;
     word-wrap: break-word;
+    overflow-wrap: anywhere;
   }
 
   #tweets-container {
